made the third branch from the first to see; also modified the html to have third branch stuff

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
 This is stuff in the first branch html.
+
+But I'm now adding stuff to the third branch (which came off the first branch).
 </body>
 </html>
